Fix for long metadta in the badge acceptance flow.
It's important to show all the data at that stage,
so the fix doesn't truncate anything, and forces
long urls or other unbroken strings of text to wrap.

The LESS has some comments on what to do if that's
not the desired behavior.

--- a/static/less/badge-accept.less
+++ b/static/less/badge-accept.less
@@ -53,15 +53,25 @@ button,
   }
 
   dl {
-    margin-top: 40px;
-  }
-  dt {
-    float: left;
-    clear: left;
-    min-width: 100px;
-  }
-  dd {
-    float: left;
+    margin-top: 0;
+
+    dt, dd {
+      padding: 2px 0;
+    }
+    dt {
+      float: left;
+      clear: left;
+      min-width: 100px;
+    }
+    dd {
+      max-width: 280px; /* = span5 - dt */
+      overflow: hidden;
+      text-overflow: ellipsis;
+      /* set word-wrap: normal if long urls should get truncated with ellipsis */
+      word-wrap: break-word; 
+      /* set white-space: nowrap if all metadata should be a single line */
+      white-space: normal;
+    }
   }
 }
 
